--- a/assets/styles/_layouts/_sidebar.scss
+++ b/assets/styles/_layouts/_sidebar.scss
@@ -1,7 +1,6 @@
-//
-// Sidebar Styles
-//
-// 0up
+/*------------------------------------*\
+    Default Page Template Styles
+\*------------------------------------*/
 .sidebar-nav {
     list-style: none;
     padding-left: 0;
