--- a/assets/styles/_modules/_forms.scss
+++ b/assets/styles/_modules/_forms.scss
@@ -1,4 +1,6 @@
-// Search form
+/*------------------------------------*\
+    Forms
+\*------------------------------------*/
 .search-form {
   @extend .form-inline;
 }
