--- a/assets/styles/_base/_global.scss
+++ b/assets/styles/_base/_global.scss
@@ -2,118 +2,214 @@
 // Global Styles
 //
 // 0up
-
-
-
 h3,
 .h3 {
-    font-family: $semibold-sans-serif;
+  font-family: $semibold-sans-serif;
 }
 
 h4,
 .h4 {
-    font-family: $semibold-sans-serif;
+  font-family: $semibold-sans-serif;
 }
 
 h5,
 .h5 {
-    font-family: $semibold-sans-serif;
+  font-family: $semibold-sans-serif;
+}
+
+@include laptop {
+  .fix-sidebar-nav {
+    margin-left: 135px !important;
+  }
 }
 
 
 body {
-    font-family: $sans-serif;
-    font-weight: 400;
-    line-height: 1.6em;
-    font-size: 16px;
-    h1 {}
-    h2,
+  font-family: $sans-serif;
+  font-weight: 400;
+  line-height: 1.6em;
+  font-size: 16px;
+  h1 {}
+  h2,
+  .sidebar-nav-heading {
+    font-family: $semibold-sans-serif;
+    font-weight: 600;
+    font-size: 28px;
+    color: $dark-blue;
+    margin-bottom: 15px;
+  }
+  #sidebar-nav {
+    width: 335px;
+    &.fix-sidebar-nav {
+      position: fixed;
+      top: 50px;
+      left: 50%;
+      margin-left: 230px;
+    }
     .sidebar-nav-heading {
-        font-family: $semibold-sans-serif;
-        font-weight: 600;
-        font-size: 28px;
-        color: $dark-blue;
-        margin-bottom: 15px;
+      margin-top: 20px;
     }
-    #sidebar-nav {
-        width: 335px;
-        &.fix-sidebar-nav {
-            position: fixed;
-            top: 50px;
-            left: 50%;
-            margin-left: 230px;
-        }
-        .sidebar-nav-heading {
-            margin-top: 20px;
-        }
-    }
+  }
 }
 
 a {
-    color: #2274dc;
+  color: #2274dc;
 }
+
 a {
-    &:hover,
-    &:active,
-    &:visited {
-        text-decoration: none;
-    }
+  &:hover,
+  &:active,
+  &:visited {
+    text-decoration: none;
+  }
 }
 
 p {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .back-to-top {
-    cursor: pointer;
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    margin-left: 475px;
-    display: none;
-    z-index: 3000;
+  cursor: pointer;
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  margin-left: 475px;
+  display: none;
+  z-index: 3000;
+  text-decoration: none;
+  &:hover,
+  &:active {
     text-decoration: none;
-    &:hover,
-    &:active {
-        text-decoration: none;
-    }
-    i {
-        display: inline-block;
-        margin-left: 20px;
-        margin-bottom: 10px;
-        padding: 0 10px 2px;
-        color: $light-blue;
-        border: 3px solid $light-blue;
-        border-radius: 60px;
-        line-height: 1;
-    }
-    p {
-        text-align: center;
-        color: $light-blue;
-        text-decoration: none;
-        text-transform: uppercase;
-    }
+  }
+  i {
+    display: inline-block;
+    margin-left: 20px;
+    margin-bottom: 10px;
+    padding: 0 10px 2px;
+    color: $light-blue;
+    border: 3px solid $light-blue;
+    border-radius: 60px;
+    line-height: 1;
+  }
+  p {
+    text-align: center;
+    color: $light-blue;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
 }
 
 strong {
-    font-family: $semibold-sans-serif;
+  font-family: $semibold-sans-serif;
 }
 
 em {
-    font-family: $italic-sans-serif;
+  font-family: $italic-sans-serif;
+}
+
+ul,
+ol {
+  padding-left: 25px;
+}
+
+//make buttons reponsive
+.button {
+  white-space: normal;
+}
+
+//make navbar not have that extra margin below it
+.navbar {
+  margin-bottom: 0px;
+  border: none;
+}
+
+.navbar-toggle {
+  .icon-bar {
+    background-color: white;
+  }
 }
 
 //font-awesome icons
 .fa-chevron-right:before {
-    position: relative;
-    top: 2px;
+  position: relative;
+  top: 2px;
 }
 
 // Extra Small Devices, Phones
 @media only screen and (min-width: $extra-small-container-width) {}
+
 // Small Devices, Tablets
 @media only screen and (min-width: $small-container-width) {}
+
 // Medium Devices, Desktops
 @media only screen and (min-width: $medium-container-width) {}
+
 // Large Devices, Wide Screens
 @media only screen and (min-width: $large-container-width) {}
+
+
+//collapse navbar ealier
+@media (min-width: 768px) and (max-width: 1280px) {
+  .navbar-nav .open .dropdown-menu {
+    position: static;
+    float: none;
+    width: auto;
+    margin-top: 0;
+    background-color: transparent;
+    border: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
+  .navbar-nav .open .dropdown-menu>li>a {
+    line-height: 20px;
+  }
+  .navbar-nav .open .dropdown-menu>li>a,
+  .navbar-nav .open .dropdown-menu .dropdown-header {
+    padding: 5px 15px 5px 25px;
+  }
+  .dropdown-menu>li>a {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: normal;
+    line-height: 1.42857143;
+    color: #333;
+    white-space: nowrap;
+  }
+  .navbar-header {
+    float: none;
+  }
+  .navbar-toggle {
+    display: block;
+  }
+  .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+  }
+  .navbar-collapse.collapse {
+    display: none!important;
+  }
+  .navbar-nav {
+    float: none!important;
+    /*margin: 7.5px -15px;*/
+    margin: 7.5px 50px 7.5px -15px
+  }
+  .navbar-nav>li {
+    float: none;
+  }
+  .navbar-nav>li>a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .navbar-text {
+    float: none;
+    margin: 15px 0;
+  }
+  /* since 3.1.0 */
+  .navbar-collapse.collapse.in {
+    display: block!important;
+  }
+  .collapsing {
+    overflow: hidden!important;
+  }
+}
