--- a/assets/styles/_layouts/_footer.scss
+++ b/assets/styles/_layouts/_footer.scss
@@ -1,24 +1,37 @@
-//
-// Footer Styles
-//
-// 0up
+/*------------------------------------*\
+    _footer.scss
+\*------------------------------------*/
+
 footer {
   background: $dark-blue;
   color: $white;
-  min-height: 315px;
+  min-height: 240px;
   font-size: 18px;
+  @include phone {
+    min-height: 100%;
+  }
   .widget {
     margin-left: auto;
     margin-right: auto;
     padding: 0 50px;
     max-width: 1280px;
+    @include tablet {
+     margin: 15px 0px;
+     padding: 0 25px;
+    }
     .logo {
       margin-top: 50px;
       margin-bottom: 15px;
       height: 50px;
+      @include phone {
+        max-width: 260px;
+        margin: 10px 0px;
+        width: 100%;
+
+      }
     }
     .phone {
-           font-size: 16px;
+      font-size: 16px;
       a {
         font-family: $sans-serif;
         color: $white;
@@ -26,14 +39,14 @@ footer {
       }
     }
     .fax {
-           font-size: 16px;
+      font-size: 16px;
       span {
         font-family: $sans-serif;
         font-size: 16px;
       }
     }
     .email {
-           font-size: 16px;
+      font-size: 16px;
       a {
         font-family: $sans-serif;
         font-size: 16px;
@@ -50,6 +63,10 @@ footer {
       text-align: center;
       font-size: 14px;
       color: #c7c7c7;
+      padding-top: 15px;
+      @include tablet {
+        display: none;
+      }
     }
   }
 }
