--- a/assets/styles/_layouts/_pages.scss
+++ b/assets/styles/_layouts/_pages.scss
@@ -1,7 +1,7 @@
-//
-// Default Page Template Styles
-//
-// Styles for 0up
+/*------------------------------------*\
+    Default Page Template Styles
+\*------------------------------------*/
+
 .home {
   &.page-parent {
     .content-wrapper {
@@ -10,6 +10,9 @@
       padding: 35px;
       min-height: 650px;
       background-color: $white;
+      @include max-laptop {
+        padding: 20px 35px;
+      }
     }
     .container-fluid {
       padding: 0;
@@ -57,12 +60,15 @@
             }
             .quick-links:after {
               position: absolute;
-              bottom: 644px;
+              bottom: 655px;
               left: 48%;
               content: '\25A0';
               transform: rotate(45deg);
               font-size: 125px;
               color: $dark-gray;
+              @include max-desktop {
+                display: none;
+              }
             }
           }
         }
@@ -71,6 +77,11 @@
   }
 }
 
+.center-block {
+  @include phone {
+    margin: 10px 0px;
+  }
+}
 
 .center-block:hover {
   .page-container {
@@ -103,11 +114,20 @@
     min-height: 140px;
     background: $darker-blue;
     color: $white;
+    @include tablet {
+      padding: 10px 25px !important;
+      min-height: 42px !important;
+    }
     h1 {
       font-family: $sans-serif;
       font-weight: 400;
       font-size: 40px;
       line-height: 106px;
+      @include tablet {
+        font-size: 28px;
+        line-height: 30px;
+        margin: 10px 0px;
+      }
     }
   }
   .wrap {
@@ -117,11 +137,20 @@
       .content-wrapper {
         padding-left: 35px;
         padding-right: 35px;
+        @include tablet {
+          padding: 15px 25px;
+        }
         .col-md-8,
         .col-md-4 {
           padding: 30px;
+          @include tablet {
+            padding: 0px
+          }
           section {
             margin-bottom: 40px;
+            @include tablet {
+              margin-bottom: 25px;
+            }
             h2:after {
               content: "";
             }
@@ -139,25 +168,25 @@
 }
 
 .ql-anchor {
-color: #00a5e5 !important;
-    margin-bottom: 20px;
+  color: #00a5e5 !important;
+  margin-bottom: 20px;
 }
 
 .quicklink-content-p {
-    color: white;
+  color: white;
 }
 
 .quicklink-block-hover {
-    &:hover {
-        .quicklink-content-p,
-        .quick-link-icon:before,
-        .ql-anchor {
-            color: #ffe800 !important;
-        }
+  &:hover {
+    .quicklink-content-p,
+    .quick-link-icon:before,
+    .ql-anchor {
+      color: #ffe800 !important;
     }
+  }
 }
-//end quicklinks
 
+//end quicklinks
 .content-wrapper,
 .page-header h1 {
   margin-left: auto;
@@ -180,9 +209,14 @@ color: #00a5e5 !important;
 }
 
 //homepage 12-col-md
-
 .padding-30px {
-    padding: 30px;
+  padding: 30px;
+  @include phone {
+    padding: 15px;
+  }
+  @include max-laptop {
+    padding: 0px 30px;
+  }
 }
 
 // Extra Small Devices, Phones
@@ -227,5 +261,123 @@ color: #00a5e5 !important;
   .content-wrapper,
   .page-header h1 {
     width: $large-container-width;
+  }
+}
+
+
+
+//Mobiles
+.slick-slider {
+  @include phone {
+    display: none;
+  }
+}
+
+.anchor_block {
+  @include tablet {
+    display: none;
+  }
+}
+
+//mobile logo
+@include tablet {
+  .navbar-brand {
+    float: none;
+    img {
+      max-width: 205px;
+      width: 100%; // top:  10px;
+      // position:   absolute;
+    }
+  }
+}
+
+//controll how the logo appears between 768px and 1199px;
+@include laptop {
+  .navbar {
+    .container {
+      width: 100%;
+      padding-left: 25px;
+      padding-right: 25px;
+    }
+  }
+  .navbar-brand {
+    float: none;
+    img {
+      max-width: 250px;
+      width: 100%;
+    }
+  }
+  .navbar-header {
+    img {
+      top: 0px;
+      position: absolute;
+    }
+  }
+
+  nav {
+    margin-top: 30px;
+    width: 100%;
+  }
+
+  .divider-rule {
+    display: none;
+  }
+}
+
+@include min-laptop {
+
+}
+
+//controlling the navbar collapse dropdown- found this to be the best solution. -GS
+@include tablet {
+  .navbar-header {
+    img {
+      top: 10px;
+      position: absolute;
+    }
+  }
+
+  nav {
+    margin-top: 23px;
+    width: 100%;
+  }
+
+  .divider-rule {
+    display: none;
+  }
+}
+
+//fix the dropdown alignment to have 25x on left and right up until the tablet 
+@include tablet {
+  .navbar {
+    .container {
+      padding-left: 25px !important;
+      padding-right: 25px !important;
+    }
+  }
+
+  .navbar-nav {
+    li {
+      a {
+        padding: 10px 0px;
+      }
+    }
+  }
+
+  .navbar-toggle {
+    margin-right: 0px !important;
+    padding: 9px 0px !important;
+  }
+}
+
+//quicklinks homepage edits
+@include tablet {
+  .quick-links {
+    padding: 5px 0px !important;
+    .center-block {
+      .quicklink-content-p {
+        padding: 5px 0 0;
+      }
+    }
   }
 }
