--- a/assets/styles/_layouts/_posts.scss
+++ b/assets/styles/_layouts/_posts.scss
@@ -1,8 +1,6 @@
-//
-// Default Post Template Styles
-//
-
-// 0up
+/*------------------------------------*\
+    _posts.scss
+\*------------------------------------*/
 
 // Extra Small Devices, Phones
 @media only screen and (min-width : $extra-small-container-width) {}
