--- a/assets/styles/_base/_global.scss
+++ b/assets/styles/_base/_global.scss
@@ -39,12 +39,13 @@ body {
     margin-bottom: 15px;
   }
   #sidebar-nav {
-    width: 335px;
+    width: 100%;
+    max-width:  402px;
     &.fix-sidebar-nav {
       position: fixed;
       top: 50px;
       left: 50%;
-      margin-left: 230px;
+      margin-left: 200px;
     }
     .sidebar-nav-heading {
       margin-top: 20px;
@@ -52,6 +53,15 @@ body {
   }
 }
 
+//sidebar responsive
+@media  screen and (min-width: 991px) and (max-width: 1280px) {
+
+  .page-header {
+    h1 {
+        padding-left:   25px ;
+    }
+  }
+}
 a {
   color: #2274dc;
 }
@@ -135,6 +145,32 @@ ol {
   top: 2px;
 }
 
+//page divider
+.single-divider-border {
+  margin: 50px 0!important;
+  border-bottom: 1px solid #ddd;
+  @include tablet {
+    margin: 25px 0!important;
+  }
+}
+
+.no-margin {
+  margin: 0px !important;
+}
+
+// makes the 12 col on main nav page go from 30px to 0px when it hits 1280px just like home page. 
+//Very important and is targeted for the empty-page template.
+.page-template-templay-empty-page-php {
+  .content-wrapper {
+    .col-md-12 {
+      padding: 30px 0;
+       @include max-laptop {
+        padding: 0px !important;
+      }
+    }
+  }
+}
+
 // Extra Small Devices, Phones
 @media only screen and (min-width: $extra-small-container-width) {}
 
@@ -146,70 +182,3 @@ ol {
 
 // Large Devices, Wide Screens
 @media only screen and (min-width: $large-container-width) {}
-
-
-//collapse navbar ealier
-@media (min-width: 768px) and (max-width: 1280px) {
-  .navbar-nav .open .dropdown-menu {
-    position: static;
-    float: none;
-    width: auto;
-    margin-top: 0;
-    background-color: transparent;
-    border: 0;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-  }
-  .navbar-nav .open .dropdown-menu>li>a {
-    line-height: 20px;
-  }
-  .navbar-nav .open .dropdown-menu>li>a,
-  .navbar-nav .open .dropdown-menu .dropdown-header {
-    padding: 5px 15px 5px 25px;
-  }
-  .dropdown-menu>li>a {
-    display: block;
-    padding: 3px 20px;
-    clear: both;
-    font-weight: normal;
-    line-height: 1.42857143;
-    color: #333;
-    white-space: nowrap;
-  }
-  .navbar-header {
-    float: none;
-  }
-  .navbar-toggle {
-    display: block;
-  }
-  .navbar-collapse {
-    border-top: 1px solid transparent;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
-  }
-  .navbar-collapse.collapse {
-    display: none!important;
-  }
-  .navbar-nav {
-    float: none!important;
-    /*margin: 7.5px -15px;*/
-    margin: 7.5px 50px 7.5px -15px
-  }
-  .navbar-nav>li {
-    float: none;
-  }
-  .navbar-nav>li>a {
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-  .navbar-text {
-    float: none;
-    margin: 15px 0;
-  }
-  /* since 3.1.0 */
-  .navbar-collapse.collapse.in {
-    display: block!important;
-  }
-  .collapsing {
-    overflow: hidden!important;
-  }
-}
