--- a/assets/styles/_layouts/_pages.scss
+++ b/assets/styles/_layouts/_pages.scss
@@ -310,8 +310,9 @@ Default Page Template Styles
   .navbar-brand {
     float: none;
     img {
-      max-width: 205px;
-      width: 100%; // top:  10px;
+      max-width: 250px;
+      width: 100%;
+// top:  10px;
       // position:   absolute;
     }
   }
@@ -324,6 +325,10 @@ Default Page Template Styles
       width: 100%;
       padding-left: 25px;
       padding-right: 25px;
+      height:   50px;
+      .navbar-brand {
+        margin:   0px;
+      }
     }
   }
   .navbar-brand {
@@ -331,6 +336,9 @@ Default Page Template Styles
     img {
       max-width: 250px;
       width: 100%;
+      height: 36px;
+    margin: 7px 0;
+    padding: 0;
     }
   }
 
