--- a/assets/styles/_layouts/_header.scss
+++ b/assets/styles/_layouts/_header.scss
@@ -36,18 +36,14 @@
   opacity: .99;
 }
 
-// Extra Small Devices, Phones
-@media only screen and (min-width: $extra-small-container-width) {}
 
-// Small Devices, Tablets
-@media only screen and (min-width: $small-container-width) {}
+/*------------------------------------*\
+  Responsive: 1280px - Infinity
+\*------------------------------------*/
 
-// Medium Devices, Desktops
-@media only screen and (min-width: $medium-container-width) {
-  @include min-1280px {
-    .navbar-header {
-      padding-top: 18px;
-    }
+@include min-1280px {
+  .navbar-header {
+    padding-top: 18px;
   }
   .navbar-collapse {
     padding-left: 0;
@@ -59,27 +55,10 @@
     margin-bottom: 0;
     .container {
       width: $medium-container-width;
-      @include min-1280px {
-        min-height: 90px;
-      }
       padding-left: 0;
       padding-right: 0;
       .navbar-brand {
         margin-left: 15px;
-      }
-    }
-  }
-  .navbar-brand {
-    margin: 0; //margin-bottom: 15px;
-    padding: 0;
-    @include min-tablet {
-      img {
-        height: 36px;
-        margin: 7px 0px;
-        padding: 0;
-        @include tablet {
-          width: 200px;
-        }
       }
     }
   }
@@ -278,12 +257,9 @@
 }
 
 
-
-
 /*------------------------------------*\
   Responsive Hamburger - breaks at 1280px
 \*------------------------------------*/
-
 
 //dropdown color
 .nav>li>a:focus,
@@ -363,5 +339,130 @@
   }
   .collapsing {
     overflow: hidden!important;
+  }
+}
+
+
+
+//code from pages.scss
+//controll how the logo appears between 768px and 1199px;
+// @include laptop {
+//   .navbar {
+//     .container {
+//       width: 100%;
+//       padding-left: 25px;
+//       padding-right: 25px;
+//       height: 50px;
+//       .navbar-brand {
+//         margin: 0px;
+//       }
+//     }
+//   }
+//   nav {
+//     margin-top: 30px;z
+//     width: 100%;
+//   }
+//   .divider-rule {
+//     display: none;
+//   }
+// }
+//controlling the navbar collapse dropdown- found this to be the best solution. -GS
+// @include max-1280px {
+//   .navbar-header {
+//     img {
+//       margin: 14px 0px;
+//       position: absolute;
+//       margin-left: 25px !important;
+//     }
+//   }
+
+//   nav {
+//     margin-top: 23px;
+//     width: 100%;
+//   }
+
+//   .divider-rule {
+//     display: none;
+//   }
+// }
+
+
+
+/*------------------------------------*\
+Responsive style 0px - 1280px
+\*------------------------------------*/
+
+//fix the dropdown alignment to have 25x on left and right up until the tablet 
+@include max-1280px {
+  //hide desktop 3rd tier dropdown
+  .dropdown-nav-wrapper {
+    display: none;
+  }
+    .navbar-header {
+    img {
+      margin: 14px 0px;
+      position: absolute;
+      margin-left: 25px !important;
+    }
+  }
+
+  nav {
+    margin-top: 23px;
+    width: 100%;
+  }
+
+  .divider-rule {
+    display: none;
+  }
+  .navbar-brand {
+    float: none;
+    img {
+      max-width: 250px;
+      width: 100%;
+      height: 36px;
+      margin: 7px 0;
+      padding: 0;
+    }
+  }
+  .navbar {
+    .container {
+      padding-left: 0px !important;
+      padding-right: 0px !important;
+    }
+  }
+  .navbar-nav {
+    //gets rid of margin space on top
+    margin: 0px -15px;
+    li {
+      a {
+        padding: 10px 25px;
+      }
+    }
+  }
+
+  .navbar-toggle {
+    margin-right: 25px !important;
+    padding: 9px 0px !important;
+  }
+}
+
+//quicklinks homepage edits
+@include tablet {
+  .quick-links {
+    padding: 5px 0px !important;
+    .center-block {
+      .quicklink-content-p {
+        padding: 5px 0 0;
+      }
+    }
+  }
+}
+
+
+@media only screen and (min-width: 1280px) and (min-width: 768px) {
+  .navbar-brand img {
+    height: 50px;
+    margin: 0;
+    padding: 0;
   }
 }
