--- a/assets/styles/_layouts/_header.scss
+++ b/assets/styles/_layouts/_header.scss
@@ -37,6 +37,7 @@
 }
 
 
+
 /*------------------------------------*\
   Responsive: 1280px - Infinity
 \*------------------------------------*/
@@ -257,6 +258,7 @@
 }
 
 
+
 /*------------------------------------*\
   Responsive Hamburger - breaks at 1280px
 \*------------------------------------*/
@@ -265,7 +267,6 @@
 .nav>li>a:focus,
 .nav>li>a:hover {
   text-decoration: none;
-  background-color: #00284a;
 }
 
 // Desktop navbar- needs margin  bottom 15px;
@@ -277,7 +278,7 @@
 }
 
 //collapse navbar ealier
-@media (min-width: 769px) and (max-width: 1280px) {
+@media (min-width: 768px) and (max-width: 1280px) {
   .navbar-nav .open .dropdown-menu {
     position: static;
     float: none;
@@ -375,32 +376,31 @@
 //       margin-left: 25px !important;
 //     }
 //   }
-
 //   nav {
 //     margin-top: 23px;
 //     width: 100%;
 //   }
-
 //   .divider-rule {
 //     display: none;
 //   }
 // }
 
-
-
 /*------------------------------------*\
-Responsive style 0px - 1280px
+Master:  0px - 1280px
 \*------------------------------------*/
 
 //fix the dropdown alignment to have 25x on left and right up until the tablet 
 @include max-1280px {
-  //hide desktop 3rd tier dropdown
+  .nav>li>a:focus,
+  .nav>li>a:hover {
+    background-color: #00284a;
+  } //hide desktop 3rd tier dropdown
   .dropdown-nav-wrapper {
     display: none;
   }
-    .navbar-header {
+  .navbar-header {
     img {
-      margin: 14px 0px;
+      //margin: 14px 0px;
       position: absolute;
       margin-left: 25px !important;
     }
@@ -419,8 +419,7 @@ Responsive style 0px - 1280px
     img {
       max-width: 250px;
       width: 100%;
-      height: 36px;
-      margin: 7px 0;
+      top: 15px;
       padding: 0;
     }
   }
