--- a/assets/styles/_layouts/_header.scss
+++ b/assets/styles/_layouts/_header.scss
@@ -38,6 +38,34 @@
 
 
 
+
+//Responsive logo for mobile
+@media (max-width: 320px) and (min-width: 0px) {
+  .navbar-brand img {
+    max-width: 220px !important;
+  }
+}
+
+//Responsive logo for mobile
+@media (max-width: 768px) and (min-width: 321px) {
+  .navbar-brand img {
+    max-width: 280px !important;
+    top: 12px !important;
+  }
+}
+
+
+//Responsive logo for mobile
+@media (max-width: 1280px) and (min-width: 768px) {
+  .navbar-brand img {
+    max-width: 360px !important;
+    top: 10px !important;
+  }
+}
+
+
+
+
 /*------------------------------------*\
   Responsive: 1280px - Infinity
 \*------------------------------------*/
@@ -259,6 +287,9 @@
 
 
 
+
+
+
 /*------------------------------------*\
   Responsive Hamburger - breaks at 1280px
 \*------------------------------------*/
@@ -391,6 +422,9 @@ Master:  0px - 1280px
 
 //fix the dropdown alignment to have 25x on left and right up until the tablet 
 @include max-1280px {
+  .container {
+    width: 100%;
+  }
   .nav>li>a:focus,
   .nav>li>a:hover {
     background-color: #00284a;
