update nav dropdown form obile and tablet to include shadow

--- a/assets/styles/_layouts/_header.scss
+++ b/assets/styles/_layouts/_header.scss
@@ -471,6 +471,7 @@ Master:  0px - 1280px
     li {
       a {
         padding: 10px 25px;
+        padding-top: 15px;
         border-bottom: 1px solid transparent;
         box-shadow: inset 0 1px 0 hsla(0, 0%, 100%, .1);
       }
