update news and events

--- a/assets/styles/_base/_variables.scss
+++ b/assets/styles/_base/_variables.scss
@@ -9,7 +9,7 @@ $sidebar-sm-columns:    4;
 $ucla-blue:             #3284BF; // UCLA Blue
 $ucla-gold:             #FFE800; // UCLA Gold
 $dark-blue:             #1E4B87; // Secondary Palette, Dark Blue
-$light-blue:            #00A5E5; // Secondary Palette, Light Blue
+$light-blue:            #00A5E5; // Secondary Palette, Light Blue, border
 $gray:                  #666666; // Tertiary Palette, Gray
 
 
