--- a/assets/styles/_layouts/_pages.scss
+++ b/assets/styles/_layouts/_pages.scss
@@ -36,7 +36,7 @@ Default Page Template Styles
               min-height: 220px;
               padding: 40px 0;
               z-index: 900;
-                position: relative;
+              position: relative;
               .page-container {
                 margin-left: auto;
                 margin-right: auto;
@@ -254,29 +254,69 @@ Default Page Template Styles
 
 // Small Devices, Tablets
 @media only screen and (min-width: $small-container-width) {
-    
-// homepage
-    .home-content {
-        &__news-wrapper {
-            padding-right: 0px;
-            p {
-              margin-bottom: 30px !important;
-              hyphens: none;
-            }
-            h2 {
-              margin-bottom:  30px !important ;
-            }
+
+  // homepage
+  .home-content {
+    &__news-wrapper {
+      padding-right: 0px;
+      h2 {
+        margin-bottom: 15px !important;
+        border-bottom: 1px solid #00A5e5;
+        padding-bottom: 20px;
+      }
+      &:last-child {
+        border-bottom: none !important;
+      }
+      &__single {
+        border-bottom: 1px solid #00A5e5;
+        padding-bottom: 15px;
+        margin-bottom: 15px;
+        &:last-of-type {
+          border-bottom: none;
         }
-        &__news-updates {
-            padding: 15px 30px;
-            background: rgba(0,165,229,.15);
+        &-date {
+          font-size: 14px;
+          color: #7a7a7a;
         }
-        &__intro-wrapper {
-            padding-right: 25px;
+        &-read {}
+        p {
+          margin-bottom: 10px !important;
+          hyphens: none;
+          line-height: 1.2em;
         }
-        &__intro-text {}
+        h4 {
+          margin-top: 0px !important;
+          font-family: $bold-sans-serif;
+        }
+      }
     }
-    
+    &__news-updates {
+      padding: 15px 30px;
+      border: 1px solid #00A5e5;
+      margin-top: 25px;
+    }
+    &__intro-wrapper {
+      padding-right: 25px;
+    }
+    &__intro-text {}
+
+    &__button {
+      padding: 10px 0px;
+      text-align: center;
+      border: 1px solid #00a5e5;
+      border-radius: 5px;
+      font-family: $bold-sans-serif;
+      color: #00a5e5;
+      font-size: 16px;
+      &:hover {
+        color: #ffe800!important;
+        background-color: #1e4b87;
+        -webkit-transition: background-color 150ms linear;
+        -ms-transition: background-color 150ms linear;
+        transition: background-color 150ms linear;
+      }
+    }
+  }
 }
 
 // Medium Devices, Desktops
@@ -339,8 +379,7 @@ Default Page Template Styles
     float: none;
     img {
       max-width: 250px;
-      width: 100%;
-      // top:  10px;
+      width: 100%; // top:  10px;
       // position:   absolute;
     }
   }
