--- a/assets/styles/_layouts/_pages.scss
+++ b/assets/styles/_layouts/_pages.scss
@@ -123,7 +123,7 @@ Default Page Template Styles
       font-family: $sans-serif;
       font-weight: 400;
       font-size: 40px;
-      line-height: 106px;
+      line-height: 60px;
       @include max-1280px {
         font-size: 28px;
         line-height: 30px; //margin: 10px 0px;
@@ -253,8 +253,8 @@ Default Page Template Styles
 @media only screen and (max-width: $small-container-width) {
 
 
-//mobile news and announcements -- Singh
-// homepage
+  //mobile news and announcements -- Singh
+  // homepage
   .home-content {
     &__news-wrapper {
       padding-right: 0px;
@@ -302,25 +302,24 @@ Default Page Template Styles
     &__button {
       padding: 10px 0px;
       text-align: center;
-      border: 1px solid #00a5e5;
-      border-radius: 5px;
-      font-family: $bold-sans-serif;
-      color: #00a5e5;
-      font-size: 16px;
+      font-family: $sans-serif;
+      color: #0072c3!important;
+      border: 1px solid #0072c3!important;
+      font-size: 14px;
       &:hover {
-        color: #ffe800 !important;
-        background-color: #1e4b87;
+        background: #1e4b87!important;
+        color: #fee700!important;
         -webkit-transition: background-color 150ms linear;
         -ms-transition: background-color 150ms linear;
         transition: background-color 150ms linear;
       }
     }
-  }
-  .ql-anchor {
+      .ql-anchor {
+    color: #2274dc !important;
     &:hover {
       color: #1e4b87 !important;
-      font-family: $bold-sans-serif;
     }
+  }
   }
 }
 
@@ -378,25 +377,25 @@ Default Page Template Styles
     &__button {
       padding: 10px 0px;
       text-align: center;
-      border: 1px solid #00a5e5;
-      border-radius: 5px;
-      font-family: $bold-sans-serif;
-      color: #00a5e5;
-      font-size: 16px;
+      font-family: $sans-serif;
+      color: #0072c3!important;
+      border: 1px solid #0072c3!important;
+      font-size: 14px;
+
       &:hover {
-        color: #ffe800 !important;
-        background-color: #1e4b87;
+        background: #1e4b87!important;
+        color: #fee700!important;
         -webkit-transition: background-color 150ms linear;
         -ms-transition: background-color 150ms linear;
         transition: background-color 150ms linear;
       }
     }
-  }
   .ql-anchor {
+    color: #2274dc !important;
     &:hover {
       color: #1e4b87 !important;
-      font-family: $bold-sans-serif;
     }
+  }
   }
 }
 
